--- a/packages/Calendar/Microsoft.Bot.Components.Calendar.csproj
+++ b/packages/Calendar/Microsoft.Bot.Components.Calendar.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Bot.Builder.Integration.Runtime" Version="4.12.0-rc1.preview" />
-    <PackageReference Include="Microsoft.Graph" Version="3.15.0" />
+    <PackageReference Include="Microsoft.Graph.Beta" Version="0.38.0-preview" />
   </ItemGroup>
 
   <ItemGroup>
