feat: js adaptive bot

--- a/generators/generator-microsoft-bot-adaptive/package.json
+++ b/generators/generator-microsoft-bot-adaptive/package.json
@@ -30,6 +30,6 @@
     "prettier": "latest"
   },
   "scripts": {
-    "lint": "eslint -c ../../.eslintrc.json ."
+    "lint": "eslint -c .eslintrc.json ."
   }
 }
