Updating luis:environment setting value to 'composer' for command-list, conversational-core, and empty generators.

--- a/generators/generator-microsoft-bot-empty/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-microsoft-bot-empty/generators/app/templates/settings/appsettings.json
@@ -28,7 +28,7 @@
     "endpoint": "",
     "authoringRegion": "",
     "defaultLanguage": "",
-    "environment": ""
+    "environment": "composer"
   },
   "luFeatures": {
     "enablePattern": true,
