--- a/generators/generator-microsoft-bot-command-list/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-microsoft-bot-command-list/generators/app/templates/settings/appsettings.json
@@ -26,7 +26,7 @@
       "endpointKey": "",
       "authoringRegion": "",
       "defaultLanguage": "",
-      "environment": "",
+      "environment": "composer",
       "endpoint": "",
       "authoringEndpoint": ""
     },
