--- a/generators/generator-microsoft-bot-conversational-core/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-microsoft-bot-conversational-core/generators/app/templates/settings/appsettings.json
@@ -25,7 +25,7 @@
     "name": "templates",
     "authoringRegion": "",
     "defaultLanguage": "",
-    "environment": "",
+    "environment": "composer",
     "endpoint": "",
     "authoringEndpoint": ""
   },
