updating default appsettings

--- a/generators/generator-bot-template-generator/app/templates/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-bot-template-generator/app/templates/generators/app/templates/settings/appsettings.json
@@ -1,44 +1,38 @@
 {
-  "feature": {
-    "UseShowTypingMiddleware": false,
-    "UseInspectionMiddleware": false,
-    "RemoveRecipientMention": false,
-    "UseSetSpeakMiddleware": true
-  },
   "MicrosoftAppPassword": "",
   "MicrosoftAppId": "",
-  "cosmosDb": {
-    "authKey": "",
-    "collectionId": "botstate-collection",
-    "cosmosDBEndpoint": "",
-    "databaseId": "botstate-db"
-  },
-  "applicationInsights": {
-    "InstrumentationKey": ""
-  },
-  "blobStorage": {
-    "connectionString": "",
-    "container": "transcripts"
+  "defaultLocale": "en-US",
+  "runtimeSettings": {
+    "features": {
+      "removeRecipientMentions": false,
+      "showTyping": false,
+      "useInspection": false,
+      "setSpeak": true,
+      "traceTranscript": false
+    },
+    "telemetry": {
+      "instrumentationKey": "",
+      "logPersonalInformation": false,
+      "logActivities": true
+    },
+    "plugins": [],
+    "skills": {
+      "allowedCallers": []
+    },
+    "adapters": []
   },
   "luis": {
-    "name": "",
-    "authoringKey": "",
-    "endpointKey": "",
+    "name": "templates",
     "authoringRegion": "",
     "defaultLanguage": "",
-    "environment": "",
+    "environment": "composer",
     "endpoint": "",
     "authoringEndpoint": ""
   },
   "publishTargets": [],
   "qna": {
     "knowledgebaseid": "",
-    "endpointkey": "",
     "hostname": ""
-  },
-  "telemetry": {
-    "logPersonalInformation": false,
-    "logActivities": true
   },
   "runtime": {
     "customRuntime": true,
@@ -47,11 +41,8 @@
     "key": "csharp-azurewebapp-v2"
   },
   "downsampling": {
-    "maxImbalanceRatio": 10,
-    "maxUtteranceAllowed": 15000
+    "maxImbalanceRatio": 10
   },
-  "defaultLanguage": "en-us",
-  "languages": [
-    "en-us"
-  ]
+  "customFunctions": [],
+  "languages": ["en-us"]
 }
