--- a/skills/declarative/calendarSkill/settings/appsettings.json
+++ b/skills/declarative/calendarSkill/settings/appsettings.json
@@ -39,7 +39,7 @@
   "runtime": {
     "key": "csharp-azurewebapp",
     "name": "C#",
-    "path": "",
+    "path": "..\\runtime",
     "command": "dotnet run --project azurewebapp",
     "customRuntime": true
   },
