--- a/packages/Calendar/Microsoft.Bot.Components.Calendar.csproj
+++ b/packages/Calendar/Microsoft.Bot.Components.Calendar.csproj
@@ -11,13 +11,13 @@
     <VersionPrefix>1.0.0</VersionPrefix>
     <Description>Plugin component for Calendaring custom action</Description>
     <Summary>Plugin component for Calendaring custom action.</Summary>
-	<SignAssembly>true</SignAssembly>
-	<AssemblyOriginatorKeyFile>..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
-	<DelaySign>true</DelaySign>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
+    <DelaySign>true</DelaySign>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.Runtime" Version="4.12.0-rc1.preview" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.Runtime" Version="4.12.0-preview" />
     <PackageReference Include="Microsoft.Graph.Beta" Version="0.38.0-preview" />
   </ItemGroup>
 
