--- a/packages/Welcome/Microsoft.Bot.Components.Welcome.nuspec
+++ b/packages/Welcome/Microsoft.Bot.Components.Welcome.nuspec
@@ -13,7 +13,7 @@
         <description>Dialogs to provide a Welcome experience for new and returning users</description>
         <tags>bf-component conversationalcore welcome preview</tags>
         <dependencies>
-            <dependency id="Microsoft.Bot.Builder.Integration.Runtime" version="4.12.0-rc1.preview" />
+            <dependency id="Microsoft.Bot.Builder.Integration.Runtime" version="4.12.0-preview" />
         </dependencies>
     </metadata>
 
