Change runtime key field to match new value in Composer

--- a/generators/generator-microsoft-bot-calendar/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-microsoft-bot-calendar/generators/app/templates/settings/appsettings.json
@@ -50,7 +50,7 @@
     "customRuntime": true,
     "path": "../",
     "command": "dotnet run --project <%= botName %>.csproj",
-    "key": "csharp-azurewebapp-v2"
+    "key": "adaptive-runtime-dotnet-webapp"
   },
   "downsampling": {
     "maxImbalanceRatio": 10,
