--- a/generators/generator-microsoft-bot-calendar-assistant/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-microsoft-bot-calendar-assistant/generators/app/templates/settings/appsettings.json
@@ -55,7 +55,7 @@
     "customRuntime": true,
     "path": "../",
     "command": "dotnet run --project <%= botName %>.csproj",
-    "key": "csharp-azurewebapp-v2"
+    "key": "adaptive-runtime-dotnet-webapp"
   },
   "downsampling": {
     "maxImbalanceRatio": -1
