Updating .csproj templates in @microsoft/generator-microsoft-bot-adaptive to include .onnx and .txt files in build output to support Orchestrator.

--- a/generators/generator-microsoft-bot-adaptive/generators/app/templates/dotnet/functions/botName.csproj
+++ b/generators/generator-microsoft-bot-adaptive/generators/app/templates/dotnet/functions/botName.csproj
@@ -12,7 +12,7 @@
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
-    <Content Include="**/*.blu;**/*.dialog;**/*.lg;**/*.lu;**/*.qna" Exclude="$(BaseOutputPath)/**;$(BaseIntermediateOutputPath)/**">
+    <Content Include="**/*.blu;**/*.dialog;**/*.lg;**/*.lu;**/*.onnx;**/*.qna;**/*.txt" Exclude="$(BaseOutputPath)/**;$(BaseIntermediateOutputPath)/**">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
