--- a/generators/generator-microsoft-bot-adaptive/package.json
+++ b/generators/generator-microsoft-bot-adaptive/package.json
@@ -22,5 +22,14 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Microsoft/botframework-components.git"
+  },
+  "devDependencies": {
+    "eslint": "latest",
+    "eslint-config-prettier": "latest",
+    "eslint-plugin-prettier": "latest",
+    "prettier": "latest"
+  },
+  "scripts": {
+    "lint": "eslint -c ../../.eslintrc.json ."
   }
 }
