--- a/generators/generator-microsoft-bot-adaptive/generators/app/templates/dotnet/webapp/botName.csproj
+++ b/generators/generator-microsoft-bot-adaptive/generators/app/templates/dotnet/webapp/botName.csproj
@@ -11,6 +11,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.Runtime" Version="4.12.0-rc1.preview" /><%- packageReferences %>
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.Runtime" Version="4.12.1-preview" /><%- packageReferences %>
   </ItemGroup>
 </Project>
