--- a/packages/Orchestrator/Microsoft.Bot.Components.Orchestrator.csproj
+++ b/packages/Orchestrator/Microsoft.Bot.Components.Orchestrator.csproj
@@ -6,14 +6,14 @@
     <VersionPrefix>1.0.0</VersionPrefix>
     <Description>Plugin component for Microsoft.Bot.Builder.Integration.Runtime to register Orchestrator adaptive recognizer.</Description>
     <Summary>Plugin component for Microsoft.Bot.Builder.Integration.Runtime to register Orchestrator adaptive recognizer.</Summary>
-	<SignAssembly>true</SignAssembly>
-	<AssemblyOriginatorKeyFile>..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
-	<DelaySign>true</DelaySign>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
+    <DelaySign>true</DelaySign>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Bot.Builder.AI.Orchestrator" Version="4.12.0-rc1.preview" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.Runtime" Version="4.12.0-rc1.preview" />
+    <PackageReference Include="Microsoft.Bot.Builder.AI.Orchestrator" Version="4.12.1-preview" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.Runtime" Version="4.12.1-preview" />
   </ItemGroup>
 
 </Project>
