--- a/generators/generator-microsoft-bot-calendar-assistant/package.json
+++ b/generators/generator-microsoft-bot-calendar-assistant/package.json
@@ -4,8 +4,8 @@
   "description": "Preview Calendar Assistant template for TESTING ONLY",
   "main": "./generators/app/index.js",
   "dependencies": {
-    "@microsoft/generator-microsoft-bot-adaptive": "workspace:*",
-    "@microsoft/generator-microsoft-bot-calendar": "workspace:*",
+    "@microsoft/generator-microsoft-bot-adaptive": "workspace:^1.0.0-preview",
+    "@microsoft/generator-microsoft-bot-calendar": "workspace:^0.0.1-preview",
     "yeoman-generator": "^2.0.5",
     "yeoman-test": "^1.9.1"
   },
