--- a/generators/generator-microsoft-bot-empty/package.json
+++ b/generators/generator-microsoft-bot-empty/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./generators/app/index.js",
   "dependencies": {
-    "@microsoft/generator-microsoft-bot-adaptive": "workspace:*",
+    "@microsoft/generator-microsoft-bot-adaptive": "workspace:^1.0.0-preview",
     "yeoman-generator": "^2.0.5",
     "yeoman-test": "^1.9.1"
   },
