calendar bug fixes part 1

--- a/skills/declarative/calendarSkill/settings/cross-train.config.json
+++ b/skills/declarative/calendarSkill/settings/cross-train.config.json
@@ -43,7 +43,8 @@
     "triggers": {
       "Next": [],
       "Previous": [],
-      "Skip": []
+      "Skip": [],
+      "Cancel": []
     }
   },
   "UpdateEventDialog.en-us": {
