--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "packages/*",
     "skills/declarative/*"
   ],
-  "devDependencies": {
-    "wsrun": "^5.2.4"
-  },
   "scripts": {
-    "wsrun": "wsrun -t"
+    "lint": "yarn workspaces foreach run lint"
   }
 }
