--- a/packages/HelpAndCancel/package.json
+++ b/packages/HelpAndCancel/package.json
@@ -17,5 +17,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Microsoft/botframework-components.git"
+  },
+  "dependencies": {
+    "botbuilder-runtime-core": "next"
   }
 }
