feat: declarative option validation

--- a/generators/generator-microsoft-bot-adaptive/package.json
+++ b/generators/generator-microsoft-bot-adaptive/package.json
@@ -13,6 +13,7 @@
     "yeoman-generator"
   ],
   "dependencies": {
+    "runtypes": "^5.0.2",
     "uuid": "^8.3.1",
     "xml2js": "^0.4.23",
     "yeoman-generator": "^1.1.1"
