--- a/packages/HelpAndCancel/Microsoft.Bot.Components.HelpAndCancel.nuspec
+++ b/packages/HelpAndCancel/Microsoft.Bot.Components.HelpAndCancel.nuspec
@@ -10,7 +10,7 @@
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
         <projectUrl>https://github.com/Microsoft/botframework-components</projectUrl>
         <releaseNotes>First version of HelpAndCancel package</releaseNotes>
-        <description>Dialog to provide "help" and "cancel" utterance handling</description>
+        <description>Dialogs to provide help and cancel utterance handling</description>
         <tags>bf-component conversationalcore helpintent cancelintent preview</tags>
         <dependencies>
             <dependency id="Microsoft.Bot.Builder.Integration.Runtime" version="4.12.1-preview" />
