Adding Logging to appsettings.  Using ILogger in triggers and controllers.

--- a/generators/generator-microsoft-bot-adaptive/generators/app/templates/assets/appsettings.json
+++ b/generators/generator-microsoft-bot-adaptive/generators/app/templates/assets/appsettings.json
@@ -20,5 +20,12 @@
     },
     "storage": "",
     "adapters": []
+  },
+  "Logging": {
+    "LogLevel": {
+    "Default": "Information",
+    "Microsoft": "Warning",
+    "Microsoft.Hosting.Lifetime": "Information"
+    }
   }
 }
