--- a/generators/generator-bot-who/package.json
+++ b/generators/generator-bot-who/package.json
@@ -2,9 +2,6 @@
   "name": "@microsoft/generator-bot-who",
   "version": "1.0.0",
   "description": "Yeoman generator for creating an Adaptive Bot application built on top of the Microsoft Bot Framework SDK and runtime.",
-  "files": [
-    "generators"
-  ],
   "keywords": [
     "microsoft",
     "bot",
@@ -12,15 +9,27 @@
     "adaptive",
     "yeoman-generator"
   ],
+  "license": "ISC",
+  "author": "Bot Framework",
+  "files": [
+    "generators"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Microsoft/botframework-components.git"
+  },
+  "scripts": {
+    "lint": "eslint -c ../../.eslintrc.json ."
+  },
   "dependencies": {
     "@microsoft/generator-microsoft-bot-adaptive": "workspace:^1.0.0-preview",
     "yeoman-generator": "^2.0.5",
     "yeoman-test": "^1.9.1"
   },
-  "author": "Bot Framework",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Microsoft/botframework-components.git"
+  "devDependencies": {
+    "eslint": "latest",
+    "eslint-config-prettier": "latest",
+    "eslint-plugin-prettier": "latest",
+    "prettier": "latest"
   }
 }
