--- a/generators/generator-microsoft-bot-command-list/package.json
+++ b/generators/generator-microsoft-bot-command-list/package.json
@@ -2,13 +2,33 @@
   "name": "@microsoft/generator-microsoft-bot-command-list",
   "version": "1.0.0",
   "description": "Preview command list bot for TESTING ONLY",
+  "keywords": [
+    "microsoft",
+    "bot",
+    "framework",
+    "adaptive",
+    "yeoman-generator"
+  ],
+  "license": "ISC",
+  "author": "Bot Framework",
   "main": "./generators/app/templates/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Microsoft/botframework-components.git"
+  },
+  "scripts": {
+    "lint": "eslint -c ../../.eslintrc.json .",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "@microsoft/generator-microsoft-bot-adaptive": "workspace:^1.0.0-preview",
     "yeoman-generator": "^2.0.5",
     "yeoman-test": "^1.9.1"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {
+    "eslint": "latest",
+    "eslint-config-prettier": "latest",
+    "eslint-plugin-prettier": "latest",
+    "prettier": "latest"
   }
 }
