--- a/generators/generator-microsoft-bot-empty/package.json
+++ b/generators/generator-microsoft-bot-empty/package.json
@@ -1,8 +1,21 @@
 {
   "name": "@microsoft/generator-microsoft-bot-empty",
   "version": "1.0.0",
-  "description": "",
+  "description": "Yeoman generator for creating an Adaptive Bot application built on top of the Microsoft Bot Framework SDK and runtime.",
+  "keywords": [
+    "conversationalcore",
+    "yeoman-generator"
+  ],
+  "license": "ISC",
+  "author": "Bot Framework",
   "main": "./generators/app/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Microsoft/botframework-components.git"
+  },
+  "scripts": {
+    "lint": "eslint -c ../../.eslintrc.json ."
+  },
   "dependencies": {
     "@microsoft/generator-microsoft-bot-adaptive": "workspace:^1.0.0-preview",
     "yeoman-generator": "^2.0.5",
@@ -13,12 +26,5 @@
     "eslint-config-prettier": "latest",
     "eslint-plugin-prettier": "latest",
     "prettier": "latest"
-  },
-  "scripts": {
-    "lint": "eslint -c ../../.eslintrc.json ."
-  },
-  "keywords": [
-    "conversationalcore",
-    "yeoman-generator"
-  ]
+  }
 }
