--- a/generators/generator-microsoft-bot-adaptive/.eslintrc.json
+++ b/generators/generator-microsoft-bot-adaptive/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../.eslintrc.json",
   "ignorePatterns": [
-    "generators/**/templates/*"
+    "generators/**/templates/**"
   ]
 }
