--- a/skills/declarative/tests/whoSkill/Microsoft.Bot.Dialogs.Tests.WhoSkill.csproj
+++ b/skills/declarative/tests/whoSkill/Microsoft.Bot.Dialogs.Tests.WhoSkill.csproj
@@ -30,5 +30,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="GetPeersTests\cachedResponses\" />
+  </ItemGroup>
 
 </Project>
