Get Collaborator tests + bug fixes

--- a/skills/declarative/tests/whoSkill/Microsoft.Bot.Dialogs.Tests.WhoSkill.csproj
+++ b/skills/declarative/tests/whoSkill/Microsoft.Bot.Dialogs.Tests.WhoSkill.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <Folder Include="GetCollaboratorsTests\cachedResponses\" />
     <Folder Include="GetPeersTests\cachedResponses\" />
   </ItemGroup>
 
