Adding Logging to appsettings.  Using ILogger in triggers and controllers. (#749)
* Adding Logging to appsettings.  Using ILogger in triggers and controllers.

* Corrected Azure Functions MessagesTrigger

* Runtime Controller/Trigger ILogging changes

--- a/generators/generator-microsoft-bot-adaptive/generators/app/templates/assets/appsettings.json
+++ b/generators/generator-microsoft-bot-adaptive/generators/app/templates/assets/appsettings.json
@@ -56,9 +56,16 @@
     },
     "storage": "",
     "telemetry": {
-      "instrumentationKey": "",
-      "logActivities": true,
-      "logPersonalInformation": false
+        "instrumentationKey": "",
+        "logActivities": true,
+        "logPersonalInformation": false
+    }
+  },
+  "Logging": {
+      "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   }
 }
