debug github workflow

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -32,11 +32,6 @@ jobs:
         working-directory: ./skills/declarative/tests
 
       # Run the calendar tests
-      - name: Run Calendar Skill tests
-        run: dotnet test ./calendarSkill/Microsoft.Bot.Dialogs.Tests.CalendarSkill.csproj --verbosity diagnostic
+      - name: Run tests
+        run: dotnet test --verbosity detailed
         working-directory: ./skills/declarative/tests
-      
-      # Run the who tests
-      - name: Run Who Skill tests
-        run: dotnet test ./whoSkill/Microsoft.Bot.Dialogs.Tests.WhoSkill.csproj --verbosity diagnostic
-        working-directory: ./skills/declarative/tests 
