--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,10 +1,14 @@
 name: Build & Test for Calendar V2
 
-on:
+on: 
   push:
-    branches: [ "calendarSkill_v2", "main" ]
+    paths:
+      - 'skills/declarative/**'
+      - 'packages/**'
   pull_request:
-    branches: [ "calendarSkill_v2", "main" ]
+    paths:
+      - 'skills/declarative/**'
+      - 'packages/**'
 
 jobs:
   build:
