Centralizing .botproj generation to adaptive generator; updating template file copy logic to apply specified bot name on file names and contents.

--- a/generators/generator-microsoft-bot-adaptive/package.json
+++ b/generators/generator-microsoft-bot-adaptive/package.json
@@ -20,6 +20,8 @@
     "url": "https://github.com/Microsoft/botframework-components.git"
   },
   "dependencies": {
+    "globby": "^11.0.2",
+    "normalize-path": "^3.0.0",
     "runtypes": "^5.0.2",
     "uuid": "^8.3.1",
     "xml2js": "^0.4.23",
