Update to standard dotnet test command

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -37,5 +37,5 @@ jobs:
 
       # Run the calendar tests
       - name: Run tests
-        run: dotnet test --verbosity detailed
+        run: dotnet test --no-build
         working-directory: ./skills/declarative/tests
