--- a/generators/generator-bot-calendar/package.json
+++ b/generators/generator-bot-calendar/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/generator-bot-calendar",
   "version": "1.0.0",
-  "description": "Preview calendar bot for TESTING ONLY",
+  "description": "Yeoman generator for creating an Adaptive Bot application using the Calendar template.",
   "keywords": [
     "microsoft",
     "bot",
@@ -23,7 +23,7 @@
     "lint": "eslint -c ../../.eslintrc.json ."
   },
   "dependencies": {
-    "@microsoft/generator-microsoft-bot-adaptive": "workspace:^1.0.0-preview",
+    "@microsoft/generator-bot-adaptive": "workspace:^1.0.0-preview",
     "yeoman-generator": "^2.0.5",
     "yeoman-test": "^1.9.1"
   },
