--- a/generators/generator-bot-command-list/package.json
+++ b/generators/generator-bot-command-list/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/generator-bot-command-list",
   "version": "1.0.0",
-  "description": "Preview command list bot for TESTING ONLY",
+  "description": "Yeoman generator for creating an Adaptive Bot application using the Command List template.",
   "keywords": [
     "microsoft",
     "bot",
@@ -24,7 +24,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@microsoft/generator-microsoft-bot-adaptive": "workspace:^1.0.0-preview",
+    "@microsoft/generator-bot-adaptive": "workspace:^1.0.0-preview",
     "yeoman-generator": "^2.0.5",
     "yeoman-test": "^1.9.1"
   },
