--- a/generators/generator-bot-adaptive/package.json
+++ b/generators/generator-bot-adaptive/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/generator-bot-adaptive",
   "version": "1.0.0",
-  "description": "Yeoman generator for creating an Adaptive Bot application built on top of the Microsoft Bot Framework SDK and runtime.",
+  "description": "Yeoman generator for creating an Adaptive bot built on the Azure Bot Framework.",
   "keywords": [
     "microsoft",
     "bot",
