--- a/generators/generator-bot-assistant-core/package.json
+++ b/generators/generator-bot-assistant-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/generator-bot-assistant-core",
   "version": "1.0.0",
-  "description": "Yeoman generator for creating an Adaptive Bot application using the Assistant Core template.",
+  "description": "Yeoman generator for creating an Adaptive bot built on the Azure Bot Framework using the Assistant Core template.",
   "keywords": [
     "microsoft",
     "bot",
