--- a/generators/generator-bot-calendar-assistant/package.json
+++ b/generators/generator-bot-calendar-assistant/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/generator-bot-calendar-assistant",
   "version": "1.0.0",
-  "description": "Yeoman generator for creating an Adaptive Bot application using the Calendar Assistant template.",
+  "description": "Yeoman generator for creating an Adaptive bot built on the Azure Bot Framework using the Calendar Assistant template.",
   "keywords": [
     "microsoft",
     "bot",
