--- a/generators/generator-bot-command-list/package.json
+++ b/generators/generator-bot-command-list/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/generator-bot-command-list",
   "version": "1.0.0",
-  "description": "Yeoman generator for creating an Adaptive Bot application using the Command List template.",
+  "description": "Yeoman generator for creating an Adaptive bot built on the Azure Bot Framework using the Command List template.",
   "keywords": [
     "microsoft",
     "bot",
