--- a/generators/generator-bot-enterprise-assistant/package.json
+++ b/generators/generator-bot-enterprise-assistant/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/generator-bot-enterprise-assistant",
   "version": "1.0.0",
-  "description": "Yeoman generator for creating an Adaptive Bot application using the Enterprise Assistant template.",
+  "description": "Yeoman generator for creating an Adaptive bot built on the Azure Bot Framework using the Enterprise Assistant template.",
   "keywords": [
     "microsoft",
     "bot",
