--- a/generators/generator-bot-qna-maker/package.json
+++ b/generators/generator-bot-qna-maker/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/generator-bot-qna-maker",
   "version": "1.0.0",
-  "description": "Yeoman generator for creating an Adaptive Bot application using the QnA Maker template.",
+  "description": "Yeoman generator for creating an Adaptive bot built on the Azure Bot Framework using the QnA Maker template.",
   "keywords": [
     "microsoft",
     "bot",
