Component: Update for R13 SDK changes around IBotPlugin -> BotComponent

--- a/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
+++ b/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
@@ -1,4 +1,23 @@
 {
+  "runtimeSettings": {
+    "adapters": [],
+    "features": {
+      "removeRecipientMentions": false,
+      "showTyping": false,
+      "traceTranscript": false,
+      "useInspection": false
+    },
+    "components": [],
+    "skills": {
+      "allowedCallers": []
+    },
+    "storage": "",
+    "telemetry": {
+        "instrumentationKey": "",
+        "logActivities": true,
+        "logPersonalInformation": false
+    }
+  },
   "customFunctions": [],
   "defaultLanguage": "en-us",
   "defaultLocale": "en-US",
@@ -41,25 +60,6 @@
     "customRuntime": true,
     "key": null,
     "path": "../"
-  },
-  "runtimeSettings": {
-    "adapters": [],
-    "features": {
-      "removeRecipientMentions": false,
-      "showTyping": false,
-      "traceTranscript": false,
-      "useInspection": false
-    },
-    "plugins": [],
-    "skills": {
-      "allowedCallers": []
-    },
-    "storage": "",
-    "telemetry": {
-        "instrumentationKey": "",
-        "logActivities": true,
-        "logPersonalInformation": false
-    }
   },
   "Logging": {
       "LogLevel": {
