--- a/skills/declarative/calendarSkill/calendarskill/settings/cross-train.config.json
+++ b/skills/declarative/calendarSkill/calendarskill/settings/cross-train.config.json
@@ -16,7 +16,7 @@
         "ListDialog.en-us",
         "ResolveDateTimeDialog.en-us"
       ],
-      "Skip": []
+      "Skip": ""
     }
   },
   "GetContactsDialog.en-us": {
@@ -25,8 +25,8 @@
       "": [
         "ListDialog.en-us"
       ],
-      "Skip": [],
-      "SetAttendeesAdd": []
+      "Skip": "",
+      "SetAttendeesAdd": ""
     }
   },
   "GetEventsDialog.en-us": {
@@ -41,10 +41,10 @@
   "ListDialog.en-us": {
     "rootDialog": false,
     "triggers": {
-      "Next": [],
-      "Previous": [],
-      "Skip": [],
-      "Cancel": []
+      "Next": "",
+      "Previous": "",
+      "Skip": "",
+      "Cancel": ""
     }
   },
   "UpdateEventDialog.en-us": {
