--- a/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
+++ b/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
@@ -35,7 +35,7 @@
     "endpointkey": "",
     "hostname": "",
     "knowledgebaseid": "",
-    "region": "westus"
+    "qnaRegion": "westus"
   },
   "runtime": {
     "command": null,
