More Generator fixes (#795)
* Removing NuGet.config from template files; adding setting to determine whether .sln file should be copied from base template; and updating appsettings.json to add default region property with value 'westus' to qna settings.

* Changing qna.region to qna.qnaRegion in appsettings.json as part of adaptive generator.

--- a/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
+++ b/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
@@ -34,7 +34,8 @@
   "qna": {
     "endpointkey": "",
     "hostname": "",
-    "knowledgebaseid": ""
+    "knowledgebaseid": "",
+    "qnaRegion": "westus"
   },
   "runtime": {
     "command": null,
