--- a/generators/generator-bot-conversational-core/package.json
+++ b/generators/generator-bot-conversational-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/generator-bot-conversational-core",
   "version": "1.0.0",
-  "description": "Yeoman generator for creating an Adaptive bot built on the Azure Bot Framework using the Conversational Core template.",
+  "description": "Yeoman generator for creating a simple conversational bot with NLP built on the Azure Bot Framework and Composer.",
   "keywords": [
     "microsoft",
     "bot",
@@ -14,7 +14,7 @@
     "bf-js-webapp",
     "bf-js-functions"
   ],
-  "license": "ISC",
+  "license": "MIT",
   "author": "Bot Framework",
   "main": "./generators/app/templates/index.js",
   "repository": {
