--- a/generators/generator-bot-adaptive/package.json
+++ b/generators/generator-bot-adaptive/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/generator-bot-adaptive",
   "version": "1.0.0",
-  "description": "Yeoman generator for creating a completely empty bot built on the Azure Bot Framework & Composer.",
+  "description": "Yeoman generator for creating a base bot built on the Azure Bot Framework and the Adaptive stack.",
   "keywords": [
     "microsoft",
     "bot",
@@ -9,7 +9,7 @@
     "adaptive",
     "yeoman-generator"
   ],
-  "license": "ISC",
+  "license": "MIT",
   "author": "Bot Framework",
   "files": [
     "*.js",
