--- a/generators/generator-bot-adaptive/generators/app/templates/dotnet/webapp/botName.csproj
+++ b/generators/generator-bot-adaptive/generators/app/templates/dotnet/webapp/botName.csproj
@@ -11,6 +11,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.Runtime" Version="4.13.0-daily.preview.20210325.227467.a85d1ad" /><%- packageReferences %>
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.Runtime" Version="4.13.0-rc0" /><%- packageReferences %>
   </ItemGroup>
 </Project>
