Adding README.md to included content in component packages.

--- a/packages/Graph/Microsoft.Bot.Components.Graph.csproj
+++ b/packages/Graph/Microsoft.Bot.Components.Graph.csproj
@@ -33,6 +33,7 @@
     <Content Include="**/*.schema" />
     <Content Include="**/*.uischema" />
     <Content Include="**/*.qna" />
+    <Content Include="README.md" />
   </ItemGroup>
 
   <PropertyGroup>
