--- a/packages/Onboarding/Microsoft.Bot.Components.Onboarding.nuspec
+++ b/packages/Onboarding/Microsoft.Bot.Components.Onboarding.nuspec
@@ -13,7 +13,7 @@
         <description>Dialogs to provide an onboarding experience</description>
         <tags>bf-component conversationalcore onboarding preview</tags>
         <dependencies>
-            <dependency id="Microsoft.Bot.Builder.Dialog.Adaptive.Runtime" version="4.13.0-rc0" />
+            <dependency id="Microsoft.Bot.Builder.Dialogs.Adaptive.Runtime" version="4.13.0-rc0" />
         </dependencies>
     </metadata>
 
