Component updates for Plugin changes (#798)
* Component: Update for R13 SDK changes around IBotPlugin -> BotComponent

* Updated Runtime version in generator-bot-adaptive

* Updated/remove Orchestrator references

* Update/removed Orchestrator references (redux)

* Corrected extending-with-code.md

* Updated to SDK rc0

* Udpated Runtime package to new name

* Updated Runtime references in sdk.schema files

* Runtime rename: update name

* Generator: update adaptive bot to latest runtime, fix functions

* Corrected build errors due to SDK changes

* Removed unused use of obsolete (gone) GraphComponentRegistration

* Calendar Skill test updates to new SDK

* Corrected Who and Calendar Skill tests

Co-authored-by: carlosscastro <ccastro@microsoft.com>

--- a/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
+++ b/generators/generator-bot-adaptive/generators/app/templates/assets/appsettings.json
@@ -58,7 +58,7 @@
       "traceTranscript": false,
       "useInspection": false
     },
-    "plugins": [],
+    "components": [],
     "skills": {
       "allowedCallers": []
     },
