--- a/packages/HelpAndCancel/Microsoft.Bot.Components.HelpAndCancel.nuspec
+++ b/packages/HelpAndCancel/Microsoft.Bot.Components.HelpAndCancel.nuspec
@@ -13,7 +13,7 @@
         <description>Dialogs to provide help and cancel utterance handling</description>
         <tags>bf-component conversationalcore helpintent cancelintent preview</tags>
         <dependencies>
-            <dependency id="Microsoft.Bot.Builder.Integration.Runtime" version="4.12.1-preview" />
+            <dependency id="Microsoft.Bot.Builder.Dialogs.Adaptive.Runtime" version="4.13.0-rc0" />
         </dependencies>
     </metadata>
 
