--- a/generators/generator-bot-enterprise-assistant/package.json
+++ b/generators/generator-bot-enterprise-assistant/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "@microsoft/generator-bot-adaptive": "workspace:^1.0.0-preview",
+    "@microsoft/generator-bot-calendar": "workspace:^1.0.0-preview",
+    "@microsoft/generator-bot-people": "workspace:^1.0.0-preview",
     "yeoman-generator": "^2.0.5",
     "yeoman-test": "^1.9.1"
   },
