--- a/generators/generator-bot-conversational-core/package.json
+++ b/generators/generator-bot-conversational-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/generator-bot-conversational-core",
   "version": "1.0.0",
-  "description": "Yeoman generator for creating a simple conversational bot with NLP built on the Azure Bot Framework and Composer.",
+  "description": "Yeoman generator for creating a simple conversational bot with NLP built on the Azure Bot Framework.",
   "keywords": [
     "microsoft",
     "bot",
