--- a/generators/generator-bot-empty/package.json
+++ b/generators/generator-bot-empty/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/generator-bot-empty",
   "version": "1.0.0",
-  "description": "Yeoman generator for creating an empty bot built on the Azure Bot Framework & Composer.",
+  "description": "Yeoman generator for creating an empty bot built on the Azure Bot Framework.",
   "keywords": [
     "microsoft",
     "bot",
