Update generator & template readme files (#809)
* Adaptive bot updates

* Empty bot readme/package.json (mostly)

* conversational core + improvements to prior

* generator for generator changes

* assistant core, mostly

* enterprise assistant

* qna maker

* root readme updates

* template readme's

* Review feedback minus more concise assistant core template

* Fixing more mistakes

* minor changes

* fix package.json descriptions

--- a/generators/generator-bot-empty/package.json
+++ b/generators/generator-bot-empty/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/generator-bot-empty",
   "version": "1.0.0",
-  "description": "Yeoman generator for creating an Adaptive bot built on the Azure Bot Framework using the Empty template.",
+  "description": "Yeoman generator for creating an empty bot built on the Azure Bot Framework.",
   "keywords": [
     "microsoft",
     "bot",
@@ -14,7 +14,7 @@
     "bf-js-webapp",
     "bf-js-functions"
   ],
-  "license": "ISC",
+  "license": "MIT",
   "author": "Bot Framework",
   "main": "./generators/app/index.js",
   "repository": {
