--- a/generators/generator-bot-enterprise-assistant/package.json
+++ b/generators/generator-bot-enterprise-assistant/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@microsoft/generator-bot-enterprise-assistant",
   "version": "1.0.0",
-  "description": "Yeoman generator for creating an Adaptive bot built on the Azure Bot Framework using the Enterprise Assistant template.",
+  "description": "Yeoman generator for creating an enterprise assistant, with a root bot and two skills built on the Azure Bot Framework.",
   "keywords": [
     "microsoft",
     "bot",
@@ -12,7 +12,7 @@
     "bf-dotnet-webapp",
     "bf-dotnet-functions"
   ],
-  "license": "ISC",
+  "license": "MIT",
   "author": "Bot Framework",
   "main": "./generators/app/index.js",
   "repository": {
