--- a/generators/generator-bot-enterprise-assistant/package.json
+++ b/generators/generator-bot-enterprise-assistant/package.json
@@ -23,9 +23,9 @@
     "lint": "eslint -c ../../.eslintrc.json ."
   },
   "dependencies": {
-    "@microsoft/generator-bot-adaptive": "workspace:^1.0.0-preview",
-    "@microsoft/generator-bot-calendar": "workspace:^1.0.0-preview",
-    "@microsoft/generator-bot-people": "workspace:^1.0.0-preview",
+    "@microsoft/generator-bot-adaptive": "workspace:^1.0.0-rc",
+    "@microsoft/generator-bot-calendar": "workspace:^1.0.0-rc",
+    "@microsoft/generator-bot-people": "workspace:^1.0.0-rc",
     "uuid": "^8.3.2",
     "yeoman-generator": "^2.0.5",
     "yeoman-test": "^1.9.1"
